# MultiModal-Detection

./: .gitattributes  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
DRONE_OBJECT_DETECTION/: grpc_client.py
PLATE_AND_OBJECT_DETECTION/triton_server/: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt  simple_grpc_test.py  simple_grpc_test_string.py
PLATE_AND_OBJECT_DETECTION/triton_server/app/: ocr_standalone.py  plate_testing_images.py  test_model_configs.py  visualize_bboxes.py
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/yolo_object_detection/: config.pbtxt
PLATE_AND_OBJECT_DETECTION/triton_server/model_repository/yolo_object_detection/1/: model.onnx
app/: api_gateway.py  main.py
docker/: anpr-docker-compose.yml  triton-docker-compose.yml
modules/anpr/api/: anpr.py
modules/anpr/core/: config.py
modules/anpr/repository/: behavioral_analytics_repository.py  database.py  global_track_repository.py  models.py
modules/anpr/schemas/: anpr.py
modules/anpr/services/: anpr_service.py  behavioral_pattern_service.py  global_tracking_service.py  paddle_ocr_engine.py  spatiotemporal_correlation_service.py  triton_client.py  video_source_processor.py
modules/anpr/utils/: analytics_utils.py  dependencies.py  media_utils.py  ocr_utils.py  output_serializers.py  request_utils.py
modules/common/: health.py  logging.py
modules/drone/: README.md  grpc_client.py
modules/face/: check_onnx_ip_op.py  convert_jsonl_to_frames.py  face_embedding_generator.py  face_tracker.py  video_client.py
modules/face/CephTest/: ceph_client.py  main.py  test_connection.py  utils.py
modules/face/api/: app.py  config.py  job_manager.py  models.py  remote_test_client.py  run_server.py  test_api_client.py
services/anpr_object/: pyproject.toml
services/anpr_object/app/: main.py
services/anpr_object/app/api/: anpr_v1.py  anpr_v2.py  health.py
services/anpr_object/app/core/: logging.py
services/anpr_object/app/repository/: behavioral_analytics_repository.py  database.py  global_track_repository.py  (+1 more)
services/anpr_object/benchmark/: api_ocr_benchmark.py  compare_benchmark_json.py
services/anpr_object/tests/: conftest.py  test_anpr_service.py  test_behavioral_repository.py  test_core_services.py  test_global_tracking_service.py  test_ocr_cleanup_regex.py  test_pipeline.py  test_processing_helpers.py  test_request_utils.py  test_routes_anpr.py  test_routes_anpr_v2.py  test_schemas_anpr_v2.py
services/face/api/: run_server.py
tests/: conftest.py  test_anpr_service.py  test_behavioral_repository.py  test_core_services.py  test_global_tracking_service.py  test_pipeline.py  test_processing_helpers.py  test_request_utils.py  test_routes_anpr.py  test_routes_anpr_v2.py  test_schemas_anpr_v2.py
triton_server/: Dockerfile  README.md  a.md  pyproject.toml
triton_server/app/: __init__.py  anpr_pipeline.py  ocr_standalone.py  ocr_triton.py  plate_detector.py  test_models.py  vehicle_detector.py
triton_server/app/utils/: __init__.py  image_utils.py  triton_client.py  visualize.py
triton_server/custom_lib/: triton_python_backend_utils.py
triton_server/model_repository/anpr_pipeline/: config.pbtxt
triton_server/model_repository/paddle_ocr_gpu_batched/: config.pbtxt
(+13 files in other folders)
