[project]
name = "multimodal-detection"
version = "0.1.0"
description = "MultiModal Detection API for ANPR, Drone, Face detection and other services using Triton Inference Server."
authors = [{name = "abhishek singh"}]
requires-python = ">=3.11"
dependencies = [
    "tritonclient[grpc]==2.65.0",
    "numpy==1.26.4",
    "opencv-python-headless>=4.11.0.86",
    "onnxruntime==1.27.0",
    "fastapi>=0.135.1",
    "uvicorn[standard]>=0.41.0",
    "gunicorn>=23.0.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "structlog==25.5.0",
    "python-multipart==0.0.22",
    "setuptools>=82.0.0",
    "python-dotenv>=1.2.1",
    "ultralytics>=8.4.21",
    "lap>=0.5.13",
    "sqlalchemy>=2.0.48",
]

index-url = "https://pypi.org/simple"
find-links = ["./triton_server/paddle_wheels"]

[project.scripts]
main = "app.main:start_server"

[dependency-groups]
dev = [
    "black==26.3.1",
    "aiohttp>=3.12.15",
    "pytest==9.0.2",
    "pytest-cov==6.2.1",
    "requests>=2.32.5",
    "ruff==0.12.12",
    "httpx2>=0.4.0"
]

[tool.uv]
environments = ["python_full_version >= '3.11'"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "modules", "triton_server"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise from err / from None
    "B017",  # assert blind exception
    "B007",  # unused loop variables (triton_server model files)
    "N801",  # class naming convention
    "N806",  # variable naming convention
    "E722",  # bare except
    "SIM102", "SIM105", "SIM108", "SIM115", "SIM117",  # simplification rules
    "E721", "E741", "C408", "SIM116", "E711", "SIM118", "SIM112",  # triton_server utils
    "F841",  # unused variables (triton_server model files)
]

[tool.ruff.lint.isort]
known-first-party = ["app", "modules", "triton_server", "common_library"]

[tool.black]
target-version = ["py311"]
line-length = 120

[tool.coverage.run]
omit = [
    "modules/face/*",
    "modules/drone/*",
    "triton_server/app/*",
    "triton_server/custom_lib/*",
]
