[project]
name = "triton-inference-server"
version = "0.1.0"
description = "This project start triton inference server currently it used numpy version 1.26.4 but need to migrate to numpy version 2.x."
requires-python = "==3.12.6"
dependencies = [
    "opencv-python>=4.13.0.92",
    "paddleocr==3.3.2",
    "paddlepaddle==3.2.2",
    "tritonclient[grpc,http]>=2.68.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]



[project.scripts]
test-image = "app.test_images:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
